--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -1,9 +1,19 @@
 .Navbar {
-	justify-content: space-between;
-	padding: 0.5rem 2rem;
+	padding: 0.5rem;
+}
+
+.collapseable {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+.Navlinks {
+	align-items: center;
 }
 
 .searchContainer {
+	display: flex;
 	border-bottom: 2px solid black;
 }
 
@@ -30,4 +40,17 @@
 .searchContainer > button:hover {
 	background-color: rgb(241, 241, 241);
 	color: black;
+}
+
+@media only screen and (min-width: 992px) {
+	.Navbar {
+		padding: 0.5rem 2rem;
+		font-size: 1.2rem;
+	}
+	.collapseable {
+		display: flex;
+		flex-direction: row;
+		justify-content: space-between;
+		width: 100%;
+	}
 }
