--- a/styles/globals.css
+++ b/styles/globals.css
@@ -34,6 +34,10 @@ p {
 	text-transform: capitalize;
 }
 
+.uppercase {
+	text-transform: uppercase;
+}
+
 .input-cont {
 	display: flex;
 	border-bottom: 2px solid black;
