--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,16 +7,24 @@ body {
 	padding: 0;
 	margin: 0;
 	font-size: 16px;
-	font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-		Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+	font-family: Montserrat, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
+		Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
 a {
-	color: inherit;
-	text-decoration: none;
+	font-family: "Open Sans", sans-serif;
+	font-weight: bold;
 }
 
+a,
 a:hover {
+	color: inherit;
 	text-decoration: none;
 }
 
@@ -39,6 +47,7 @@ p {
 	text-transform: uppercase;
 }
 
+/* should make a wrapper component for these */
 .input-cont {
 	display: flex;
 	border-bottom: 2px solid black;
