--- a/styles/Hero.module.css
+++ b/styles/Hero.module.css
@@ -3,7 +3,7 @@
 	height: 95vh;
 	display: flex;
 	align-items: center;
-	background-color: aqua;
+	background-color: lightgray;
 }
 
 .Hero .content {
