--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,7 +6,7 @@ html,
 body {
 	padding: 0;
 	margin: 0;
-	font-size: 16px;
+	font-size: 12px;
 	font-family: Montserrat, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
 		Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
@@ -76,4 +76,11 @@ p {
 .input-cont > button:hover {
 	background-color: rgb(241, 241, 241);
 	color: black;
+}
+
+@media only screen and (min-width: 992px) {
+	html,
+	body {
+		font-size: 16px;
+	}
 }
