--- a/styles/ItemGallery.module.css
+++ b/styles/ItemGallery.module.css
@@ -6,7 +6,8 @@
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
-	padding: 1rem 2rem;
+	font-family: var(--mont);
+	margin: 1rem;
 }
 
 .imagecont {
@@ -14,7 +15,8 @@
 }
 
 .cardbody {
-	margin: 1rem 0;
+	padding: 1rem 0.5rem;
+	background-color: antiquewhite;
 }
 
 .price {
