--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,9 @@
+:root {
+	--mont: Montserrat, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
+		Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+	--open-sans: "Open Sans", sans-serif;
+}
+
 * {
 	box-sizing: border-box;
 }
@@ -6,9 +12,8 @@ html,
 body {
 	padding: 0;
 	margin: 0;
-	font-size: 12px;
-	font-family: Montserrat, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
-		Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+	font-size: 14px;
+	font-family: var(--mont);
 	color: var(--dark);
 }
 
@@ -19,7 +24,7 @@ h4,
 h5,
 h6,
 a {
-	font-family: "Open Sans", sans-serif;
+	font-family: var(--open-sans);
 	font-weight: bold;
 }
 
