--- a/styles/InputSelect.module.css
+++ b/styles/InputSelect.module.css
@@ -2,7 +2,7 @@
 	font-weight: bold;
 	text-transform: uppercase;
 	padding: 0.6rem 1.6rem 0.6rem 0.3rem;
-	margin: 0.5rem auto;
+	margin: 0 0.5rem;
 	border: 3px solid var(--gray);
 	border-radius: 5%;
 	cursor: pointer;
