--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,7 @@
 	--mont: Montserrat, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
 		Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 	--open-sans: "Open Sans", sans-serif;
+	--c-light: #fafafa;
 }
 
 * {
