--- a/styles/InputSelect.module.css
+++ b/styles/InputSelect.module.css
@@ -1,9 +1,9 @@
 .inputSelect {
 	font-weight: bold;
+	font-size: 16px;
 	text-transform: uppercase;
 	padding: 0.6rem 1.6rem 0.6rem 0.3rem;
 	margin: 0 0.5rem;
 	border: 3px solid var(--gray);
-	border-radius: 5%;
 	cursor: pointer;
 }
