--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,6 +3,7 @@
 		Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 	--open-sans: "Open Sans", sans-serif;
 	--c-light: #fafafa;
+	--box-border: 5px solid black;
 }
 
 * {
@@ -33,6 +34,13 @@ a,
 a:hover {
 	color: inherit;
 	text-decoration: none;
+}
+
+input,
+button,
+select {
+	font-family: var(--open-sans);
+	font-weight: bold;
 }
 
 ul {
