--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -3,10 +3,11 @@
 	padding: 0.5rem;
 	width: 100%;
 	z-index: 100;
-}
-
-.scrolled {
+	transition: all 300ms linear 30ms;
 	background-color: white;
+	box-shadow: var(--box-shadow-down);
+	-webkit-box-shadow: var(--box-shadow-down);
+	-moz-box-shadow: var(--box-shadow-down);
 }
 
 .collapseable {
@@ -44,7 +45,12 @@
 	.Navbar {
 		padding: 0.5rem 2rem;
 		font-size: 1.2rem;
+		background-color: initial;
+		box-shadow: unset;
+		-webkit-box-shadow: unset;
+		-moz-box-shadow: unset;
 	}
+
 	.collapseable {
 		display: flex;
 		flex-direction: row;
@@ -57,5 +63,12 @@
 		padding: initial;
 		height: auto;
 		transform: initial;
+	}
+
+	.scrolled {
+		background-color: white;
+		box-shadow: var(--box-shadow-down);
+		-webkit-box-shadow: var(--box-shadow-down);
+		-moz-box-shadow: var(--box-shadow-down);
 	}
 }
