--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -3,7 +3,7 @@
 	padding: 0.5rem;
 	width: 100%;
 	z-index: 100;
-	transition: all 300ms linear 30ms;
+	transition: all 200ms linear;
 	background-color: white;
 	box-shadow: var(--box-shadow-down);
 	-webkit-box-shadow: var(--box-shadow-down);
@@ -13,7 +13,6 @@
 .collapseable {
 	display: flex;
 	flex-direction: column;
-	/* changes */
 	align-items: flex-start;
 	position: fixed;
 	top: 0;
@@ -37,7 +36,6 @@
 }
 
 .Navlinks {
-	/*changes*/
 	align-items: flex-start;
 }
 
@@ -56,7 +54,6 @@
 		flex-direction: row;
 		justify-content: space-between;
 		width: 100%;
-		/*changes*/
 		align-items: center;
 		position: static;
 		background-color: transparent;
