--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -18,6 +18,7 @@
 	position: fixed;
 	top: 0;
 	left: 0;
+	z-index: inherit;
 	background-color: white;
 	padding: 2rem;
 	height: 100vh;
@@ -40,6 +41,11 @@
 	align-items: flex-start;
 }
 
+.bagIcon {
+	margin: 0 0.5rem;
+	fill: inherit;
+}
+
 @media only screen and (min-width: 992px) {
 	.Navbar {
 		padding: 0.5rem 2rem;
@@ -48,6 +54,10 @@
 		box-shadow: unset;
 		-webkit-box-shadow: unset;
 		-moz-box-shadow: unset;
+	}
+
+	.Navbar.withHero a {
+		color: white !important;
 	}
 
 	.collapseable {
@@ -68,5 +78,17 @@
 		box-shadow: var(--box-shadow-down);
 		-webkit-box-shadow: var(--box-shadow-down);
 		-moz-box-shadow: var(--box-shadow-down);
+	}
+
+	.scrolled.withHero a {
+		color: inherit !important;
+	}
+
+	.withHero .bagIcon {
+		fill: white;
+	}
+
+	.withHero.scrolled .bagIcon {
+		fill: inherit;
 	}
 }
