--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,6 +3,7 @@
 		Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 	--open-sans: "Open Sans", sans-serif;
 	--c-light: #fafafa;
+	--c-dark: var(--dark);
 	--box-border: 5px solid black;
 	--box-shadow-down: 0px 10px 15px -4px rgba(0, 0, 0, 0.05);
 }
