--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -6,9 +6,7 @@
 	z-index: 100;
 	transition: all 200ms linear;
 	background-color: white;
-	box-shadow: var(--box-shadow-down);
-	-webkit-box-shadow: var(--box-shadow-down);
-	-moz-box-shadow: var(--box-shadow-down);
+	border-bottom: 1px solid rgb(212, 212, 212);
 }
 
 .collapseable {
@@ -43,17 +41,30 @@
 
 .bagIcon {
 	margin: 0 0.5rem;
-	fill: inherit;
+	fill: var(--c-dark);
+}
+
+.Brand {
+	font-size: 1rem;
+}
+
+.buttonGroup {
+	display: flex;
+	align-items: center;
+}
+
+.toggleButton {
+	margin-left: 1rem;
 }
 
 @media only screen and (min-width: 992px) {
 	.Navbar {
 		padding: 0.5rem 2rem;
-		font-size: 1.2rem;
 		background-color: initial;
 		box-shadow: unset;
 		-webkit-box-shadow: unset;
 		-moz-box-shadow: unset;
+		border: none;
 	}
 
 	.Navbar.withHero a {
@@ -75,9 +86,7 @@
 
 	.scrolled {
 		background-color: white;
-		box-shadow: var(--box-shadow-down);
-		-webkit-box-shadow: var(--box-shadow-down);
-		-moz-box-shadow: var(--box-shadow-down);
+		border-bottom: var(--std-border);
 	}
 
 	.scrolled.withHero a {
@@ -89,6 +98,6 @@
 	}
 
 	.withHero.scrolled .bagIcon {
-		fill: inherit;
+		fill: var(--c-dark);
 	}
 }
