--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,10 +2,12 @@
 	--mont: Montserrat, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
 		Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 	--open-sans: "Open Sans", sans-serif;
-	--c-light: #fafafa;
-	--c-dark: var(--dark);
+	--c-light: #f8f8f8;
+	--c-dark: #25171a;
+	--c-active: #016fb9;
 	--box-border: 5px solid black;
 	--box-shadow-down: 0px 10px 15px -4px rgba(0, 0, 0, 0.05);
+	--std-border: 1px solid rgb(212, 212, 212);
 }
 
 * {
@@ -18,7 +20,7 @@ body {
 	margin: 0;
 	font-size: 14px;
 	font-family: var(--mont);
-	color: var(--dark);
+	color: var(--c-dark);
 }
 
 h1,
@@ -26,14 +28,14 @@ h2,
 h3,
 h4,
 h5,
-h6,
-a {
+h6 {
 	font-family: var(--open-sans);
 	font-weight: bold;
 }
 
 a,
 a:hover {
+	font-family: var(--open-sans);
 	color: inherit;
 	text-decoration: none;
 }
