--- a/styles/Breadcrumbs.module.css
+++ b/styles/Breadcrumbs.module.css
@@ -1,3 +1,7 @@
+.Breadcrumbs {
+	display: none;
+}
+
 .Breadcrumbs > ol {
 	background-color: transparent;
 }
@@ -9,4 +13,10 @@
 
 .crumb + .crumb::before {
 	content: "-";
+}
+
+@media only screen and (min-width: 992px) {
+	.Breadcrumbs {
+		display: initial;
+	}
 }
