--- a/styles/ProductPageMain.module.css
+++ b/styles/ProductPageMain.module.css
@@ -40,7 +40,7 @@
 }
 
 .buttons > * {
-	margin: 0.25rem 0;
+	margin: 0.4rem 0;
 }
 
 .buttons :first-child {
@@ -51,13 +51,19 @@
 	margin-right: 0;
 }
 
-.atc {
+.atcGroup {
+	display: flex;
+	align-items: center;
+}
+
+button.atc {
 	background-color: black;
 	text-transform: uppercase;
 	font-weight: bold;
+	font-size: 1rem;
 	padding: 0.6rem 1.6rem;
 	border-color: initial;
-	border: 2px solid black;
+	border: 3px solid black;
 }
 
 .atc:hover,
@@ -75,6 +81,15 @@
 	border-color: initial !important;
 }
 
+.amount {
+	font-weight: bold;
+	font-size: 1rem;
+	text-transform: uppercase;
+	padding: 0.6rem 0 0.6rem 0.3rem;
+	border: 3px solid var(--gray);
+	margin-left: 0.2rem;
+}
+
 @media only screen and (min-width: 992px) {
 	.mainRow {
 		flex-direction: row;
@@ -86,10 +101,6 @@
 	}
 
 	.buttons {
-		flex-direction: row;
-	}
-
-	.buttons > * {
-		margin: 0 0.25rem;
+		align-items: flex-start;
 	}
 }
