--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -47,6 +47,11 @@
 	align-items: center;
 }
 
+.bottom {
+	color: var(--gray);
+	margin-bottom: 1rem;
+}
+
 @media only screen and (min-width: 992px) {
 	.copy {
 		justify-content: flex-start;
