--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -20,6 +20,7 @@
 	background-color: white;
 	padding: 2rem;
 	height: 100vh;
+	width: 70vw;
 	transform: translateX(-100%);
 	transition-duration: 200ms;
 	transition-timing-function: ease-out;
