--- a/styles/Section.module.css
+++ b/styles/Section.module.css
@@ -1,6 +1,10 @@
 .section {
-	padding-top: 2rem;
+	padding-top: 1rem;
 	padding-bottom: 2rem;
 	padding-left: 0;
 	padding-right: 0;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: flex-start;
 }
