--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -13,7 +13,7 @@
 }
 
 .company .sectionHeading {
-	margin: 2rem 0;
+	margin: 2rem 0 1rem 0;
 }
 
 .company .mailContainer {
@@ -64,5 +64,14 @@
 
 	.legalLinks > li {
 		margin: 0 0.4rem;
+	}
+
+	.companyLink {
+		color: var(--gray);
+	}
+
+	.companyLink:hover {
+		color: var(--c-dark);
+		text-decoration: underline;
 	}
 }
