--- a/styles/InputSelect.module.css
+++ b/styles/InputSelect.module.css
@@ -6,3 +6,20 @@
 	border: 3px solid var(--gray);
 	cursor: pointer;
 }
+
+.label {
+	text-transform: uppercase;
+	font-size: 0.8rem;
+	font-weight: bold;
+	letter-spacing: 0.2rem;
+	color: var(--gray);
+}
+
+.label::after {
+	content: ":";
+}
+
+.wrapper {
+	display: flex;
+	flex-direction: column;
+}
