--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,7 @@
 	--open-sans: "Open Sans", sans-serif;
 	--c-light: #f8f8f8;
 	--c-dark: #25171a;
+	--c-dark-hover: #3d393a;
 	--c-active: #016fb9;
 	--box-shadow-down: 0px 10px 15px -4px rgba(0, 0, 0, 0.05);
 	--std-border: 1px solid rgb(212, 212, 212);
