added search bar to header

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,6 +3,7 @@
 		Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 	--open-sans: "Open Sans", sans-serif;
 	--c-light: #f8f8f8;
+	--c-light-gray: #dfdfdf;
 	--c-dark: #25171a;
 	--c-dark-hover: #3d393a;
 	--c-active: #016fb9;
