--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -25,7 +25,7 @@
 	background-color: white;
 	padding: 2rem;
 	height: 100vh;
-	width: 70vw;
+	width: 80vw;
 	transform: translateX(-100%);
 	transition-duration: 200ms;
 	transition-timing-function: ease-out;
@@ -94,11 +94,12 @@
 		justify-content: space-between;
 		width: 100%;
 		align-items: center;
-		position: static;
+		position: relative;
 		background-color: transparent;
 		padding: initial;
 		height: auto;
 		transform: initial;
+		margin: 0 1rem;
 	}
 
 	.scrolled {
