--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -84,6 +84,28 @@
 		margin-right: 1rem;
 	}
 
+	.Navlinks a {
+		position: relative;
+	}
+
+	.Navlinks a::before {
+		content: "";
+		position: absolute;
+		z-index: -1;
+		bottom: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		border-bottom: 2px solid var(--c-dark);
+		border-radius: 1px;
+		transform: scaleX(0);
+		transition: all 0.1s;
+	}
+
+	.Navlinks a:hover::before {
+		transform: scale(1);
+	}
+
 	.Brand {
 		margin-right: 2rem;
 	}
