--- a/styles/SearchBar.module.css
+++ b/styles/SearchBar.module.css
@@ -11,11 +11,13 @@
     padding: 0.2rem 1rem;
 }
 
-.SearchBar:not(:focus) + .suggestions {
-    display: none;
+.SearchBar:focus + .suggestions,
+.suggestions:hover {
+    display: block;
 }
 
 .suggestions {
+    display: none;
     position: absolute;
     top: 120%;
     width: 100%;
@@ -23,8 +25,42 @@
     border: var(--std-border);
 }
 
-.suggestions > * {
+.suggestions > * + * {
+    border-top: 2px solid #efefef;
+}
+
+.suggestions > *:hover {
+    background-color: #efefef;
+}
+
+.suggestions a {
+    display: grid;
+    grid-template-areas:
+        "i i i t t t"
+        "i i i p p p"
+        "i i i . . .";
+    justify-content: flex-start;
+    align-items: flex-start;
+    margin: 0;
     padding: 1rem;
-    display: flex;
-    flex-direction: column;
+}
+
+.suggestions a:active {
+    background-color: white;
+}
+
+.suggestions a .suggestionImage {
+    grid-area: i;
+    position: relative;
+    height: 5.3em;
+    width: 6em;
+    margin-right: 1em;
+}
+
+.suggestions a .suggestionTitle {
+    grid-area: t;
+}
+
+.suggestions a .suggestionPrice {
+    grid-area: p;
 }
