--- a/styles/Layout.module.css
+++ b/styles/Layout.module.css
@@ -4,5 +4,11 @@
 }
 
 .Layout main {
-    padding: 4rem 0;
+    padding: 7rem 0;
+}
+
+@media only screen and (min-width: 992px) {
+    .Layout main {
+        padding: 4rem 0;
+    }
 }
