predictive advanced search

--- a/styles/SearchBar.module.css
+++ b/styles/SearchBar.module.css
@@ -19,6 +19,7 @@
 .suggestions {
     display: none;
     position: absolute;
+    z-index: 100;
     top: 120%;
     width: 100%;
     background-color: white;
